ui/components/QuickSearch.scss
@import "css/variables";

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.search-icon {
  position: absolute;
  left: $spacer * 0.75;
  margin-bottom: 1px;
}

.slash-icon, .close-icon {
  position: absolute;
}

.slash-icon {
  right: 0.6rem;
  margin-bottom: 1px;
  color: $gray-500;
  border: 1px solid $gray-400;
  border-radius: $border-radius * 0.5;
  width: 1.15rem;
  height: 1.2rem;
  text-align: center;
  line-height: 1.1rem;
  font-size: $font-size-sm;
  pointer-events: none;
  opacity: 0;

  // delay display of this element a little bit because when the cancel
  // icon is clicked, the input loses focus for a few milliseconds and we don't
  // want to see the slash then
  animation: fade-in 30ms linear 30ms 1 forwards;
}

.close-icon {
  right: 0.65rem;
  margin-bottom: 2px;
  cursor: pointer;
  
  :global(svg) {
    stroke: $gray-600;
  }
}

input {
  width: 100%;

  &.has-search-icon {
    padding-left: 2.5rem;
  }
}

.quicksearch-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: relative;
}

